# server/controllers/Circuit.js
@@ -195,6 +195,19 @@ module.exports.getSubCircuits = function getSubCircuits(req, res, next) {
 		});
 };
 
+module.exports.updateCircuitCategory = function updateCircuitCategory(req, res, next) {
+	var circuitId = req.swagger.params['circuitId'].value;
+	var categoryId = req.swagger.params['categoryId'].value;
+	var body = req.swagger.params['body'].value;
+	Circuit.updateCircuitCategory(circuitId, categoryId, body)
+		.then(function (response) {
+			utils.writeJson(res, response);
+		})
+		.catch(function (response) {
+			utils.writeJson(res, response);
+		});
+};
+
 module.exports.updateCircuitComponent = function updateCircuitComponent(req, res, next) {
 	var circuitId = req.swagger.params['circuitId'].value;
 	var componentId = req.swagger.params['componentId'].value;
